# isolation

./: .gitignore  .gitmodules  README.md  README.rst  _CoqProject  sloc.sh  time_build.sh
coq/: Bits.v  Common.v  Environments.v  EqDec.v  Frontend.v  Parsing.v  SemanticUtils.v  Semantics.v  StaticAnalysis.v  StaticAnalysisCorrect.v  Std.v  Syntax.v  SyntaxMacros.v  Tactics.v  Typechecking.v  TypecheckingCorrectness.v  Utils.v  koika_v1.v
coq/examples/: ResourceIsolation_Impl.v  ResourceIsolation_Proof.v  ResourceIsolation_ProofImpl.v  ResourceIsolation_ProofSim.v  ResourceIsolation_ProofSpec.v  ResourceIsolation_Spec.v  ResourceIsolation_Theorem.v  ResourceIsolation_Util.v
dkoika/: Makefile  _CoqProject  dune  dune-project  koika.opam.template
dkoika/scripts/: time_build.sh
dkoika/src/koika/: AnnotatedSyntax.v  Bits.v  Common.v  Environments.v  EqDec.v  Frontend.v  Koika0_FiniteType.v  Parsing.v  PrettySyntax.v  ScheduleEquiv.v  SemanticUtils.v  Semantics.v  StateMachine.v  StaticAnalysis.v  StaticAnalysisCorrect.v  Std.v  Symbolic.v  SymbolicInterp.v  SymbolicParsing.v  Syntax.v  SyntaxMacros.v  SyntaxUtils.v  Tactics.v  Typechecking.v  TypecheckingCorrectness.v  Utils.v  dune
dkoika/src/koikaExamples/: KoikaConversion.v  Shared.v  dune
dkoika/src/koikaExamples/EnclaveWithCache/: Common.v  ConcreteDefs.v  External.v  (+40 more)
etc/ae/: README.md
smt_koika/: dune  dune-project
smt_koika/scripts/: extract_smt_time.sh  time_smt.sh
smt_koika/src/: build_file.sh  dune  eff_monad.ml  koika_smt.ml  main.ml  query_ast.ml  query_lexer.mll  query_parser.mly  syntax.ml
(+61 files in other folders)
